fix: added z-index to mode help tooltip and z-index system

--- a/src/bundle/sticky/sticky.scss
+++ b/src/bundle/sticky/sticky.scss
@@ -1,4 +1,4 @@
-@use '../../styles/zindex' as zIndexVars;
+@use '../../styles/mixins.scss';
 
 $block: 'g-md-editor-sticky';
 
@@ -13,7 +13,7 @@ $block: 'g-md-editor-sticky';
     }
 
     &_sticky-active:not(.#{$block}_clear) {
-        z-index: zIndexVars.$sticky-toolbar;
+        @include mixins.z-index('sticky-toolbar');
 
         padding: var(--g-md-toolbar-sticky-padding);
 
